[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Controls.png" type="Texture" id=2]

[node name="MainMenu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_right = 100.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MenuButtons"]
margin_right = 200.0
margin_bottom = 20.0
text = "PLAY"

[node name="ControlsButton" type="Button" parent="MenuButtons"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 60.0
text = "CONTROLS"

[node name="QuitButton" type="Button" parent="MenuButtons"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 100.0
text = "QUIT"

[node name="ControlRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 550.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="ControlRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 47.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MenuButtons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuButtons/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="MenuButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ControlRect/BackButton" to="." method="_on_BackButton_pressed"]
